# gengine-mcp-catalog

./: .actrc  .coverage  .env.local.example  .env.template  .gitignore  .gitmodules  .mcp.json  .secrets.local.example  ADDING_CUSTOM_SERVERS.md  GITHUB_ISSUE_CODE_2_RESTAPI_RENAME.md  README.md  README_DEPLOYMENT.md  REGISTRY_STATUS.md  __init__.py  __main__.py  cli.py  config.py  config_generator.py  config_parser.py  coverage.xml  custom_registry.json  dynamic_registry.py  local_registry.py  main.py  pyproject.toml  registry_sync.py  server.py  subprocess_manager.py  tool_schemas.py
.github/events/: develop-push.json  main-push.json  release-published.json
.github/workflows/: ci-cd.yml
api/: __init__.py  dependencies.py  flask_server.py  main.py  openapi_catalog.py
api-doc-to-mcp/: langgraph_api_structure.json  langgraph_openapi.json
api-doc-to-mcp/.taskmaster/: config.json  state.json
api-doc-to-mcp/.taskmaster/docs/: api-doc-to-mcp-prd.txt  prd.txt
api-doc-to-mcp/.taskmaster/tasks/: tasks.json
api/models/: __init__.py  servers.py
api/routers/: __init__.py  config.py  servers.py
configs/: context7.yaml  github.yaml  knowledge-graph.yaml  perplexity.yaml  sequential-thinking.yaml  taskmaster.yaml
docs/: ACT_LOCAL_TESTING.md  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  GIT_SUBMODULES_STRATEGY.md
examples/flask-api/: .genmcp.yml
examples/flask-api/api/: server.py
infrastructure/nomad/jobs/: gengine-api-simple.nomad  gengine-rest-api.nomad  mcp-server.nomad  test-health.nomad  test-simple.nomad
infrastructure/nomad/scripts/: fix-nomad.sh
infrastructure/terragrunt/aws/: root.hcl  root.hcl.bak
infrastructure/terragrunt/aws/development/: .terraform.lock.hcl  terragrunt.hcl
infrastructure/terragrunt/aws/env-config/: development.hcl  production.hcl  staging.hcl
infrastructure/terragrunt/aws/nomad-cluster/: terragrunt.hcl.old
infrastructure/terragrunt/aws/production/: terragrunt.hcl
infrastructure/terragrunt/aws/staging/: terragrunt.hcl
infrastructure/terragrunt/modules/nomad-cluster/aws/: bastion.tf  main.tf  outputs.tf  user_data_client.sh  user_data_server.sh  variables.tf
mcp-catalog/: catalog.yml  test_api_server.py
mcp-catalog/docs/: capture-examples.md  traffic-capture-guide.md
mcp-catalog/examples/go-api/api/: server.go
mcp-catalog/registry/: known_servers.json
mcp-catalog/servers/: mcp_catalog_server.py
scripts/: aws-prerequisites.sh  generate-aws-credentials.sh  generate-azure-credentials.sh  generate-gcp-credentials.sh  setup-cloud-credentials.sh  test-pipeline.sh
tests/: __init__.py  conftest.py  test_config.py  test_config_endpoints.py  test_main.py  test_main_app.py  test_server_endpoints.py  test_servers.py  test_servers_tools.py  test_servers_tools_transports.py
workspace/: captured-openapi.json  flask_catalog_openapi.yaml  unknown_api__mcp_server.py
